[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphics/images/misc/displacement.png" type="Texture" id=1]
[ext_resource path="res://graphics/images/interface/white.png" type="Texture" id=2]
[ext_resource path="res://source/glitch/Glitch.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask : hint_albedo;
uniform float offset : hint_range(0.0, 0.01);
uniform float abberation : hint_range(0.0, 0.01);

void fragment() {
	
	vec4 disp = texture(mask, SCREEN_UV);
	vec2 uv = SCREEN_UV;
	
	if (disp.r == 1.0) {
		uv.x += offset;
	} else {
		uv.x -= offset;
	}
	
	COLOR.r = texture(SCREEN_TEXTURE, uv + abberation).r;
	COLOR.g = texture(SCREEN_TEXTURE, uv).g;
	COLOR.b = texture(SCREEN_TEXTURE, uv - abberation).b;
	COLOR.a = texture(SCREEN_TEXTURE, uv).a;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/offset = 0.0
shader_param/abberation = null
shader_param/mask = ExtResource( 1 )

[node name="Glitch" type="NinePatchRect"]
pause_mode = 2
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Wait" type="Timer" parent="."]
one_shot = true

[node name="Glitch" type="Timer" parent="."]
one_shot = true

[node name="Mask" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Wait" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Glitch" to="." method="_on_Glitch_timeout"]
[connection signal="timeout" from="Mask" to="." method="_on_Mask_timeout"]
